tests/driver/pass/unused_locals/test.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

ref type RT {
    x: int32,
    init() {
        self.x = 123;
    }
}

func has_unused_values() {
    let x = 1;
    let y = 2;
    var z = 3;
    z = z + 1;
    let _x = 1;

    let rt1 = alloc RT();
    let rt2 = alloc RT();
    let rt3 = alloc RT();
    rt1.x = rt3.x;

    var t1 = {1,2,3,4};
    var t2 = {1,2,3,4};
    t1[0] = 4;
}

func main() ret int32 {
    return 0;
}
