tests/driver/fail/ref_type_init_declared_not_used/test.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

ref type ord_pair {
    max: int64,
    min: int64,
    init(x: int64, y: int64) {
        if (x > y) {
            self.max = x;
            self.min = y;
        } else {
            self.max = y;
            self.min = y;
        };
    }
}

func main() ret int64 {
    let p1 = alloc ord_pair;
    let p2 = alloc ord_pair;
    return p1.max + p2.min;
}
